--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "pinia": "^2.2.4",
+    "three": "^0.169.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
