--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier": "^3.3.3",
     "typescript": "~5.5.4",
     "vite": "^5.4.8",
+    "vite-plugin-gltf": "^4.0.0",
     "vitest": "^2.1.2",
     "vue-tsc": "^2.1.6"
   }
