I can't continue this project in ts it gives me too many errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "declaration": true,
     "typeRoots": ["./node_modules/@types"],
     "baseUrl": "./",
     "paths": {
